--- a/resources/react/package.json
+++ b/resources/react/package.json
@@ -15,9 +15,11 @@
     "@tailwindcss/forms": "^0.5.4",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
+    "draft-js": "^0.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "react-select": "^5.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
