--- a/resources/react/package.json
+++ b/resources/react/package.json
@@ -16,7 +16,9 @@
     "antd": "^5.7.3",
     "axios": "^1.4.0",
     "draft-js": "^0.11.7",
+    "laravel-echo": "^1.15.3",
     "moment": "^2.29.4",
+    "pusher-js": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
